# ai-workbench

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
crates/awb-core/: Cargo.toml
crates/awb-core/src/: lib.rs  paths.rs  runlog.rs  runner.rs  shell_env.rs  transcript.rs  worklog.rs
crates/awb-server/: Cargo.toml
crates/awb-server/src/: auth.rs  config.rs  gc.rs  gitdiff.rs  launchd.rs  main.rs  pairing.rs  perm.rs  power.rs  push.rs  queue.rs  routes.rs  runreg.rs  sessions.rs  streamevt.rs  transcript.rs  ws.rs
docs/: BACKLOG.md  USAGE.md
docs/superpowers/plans/: 2026-07-06-ai-workbench-plan1-discovery.md  2026-07-06-ai-workbench-plan2-execution.md  2026-07-07-ai-workbench-mobile-plan1-core-lib.md  2026-07-07-ai-workbench-mobile-plan2a-server-foundation.md  2026-07-07-ai-workbench-mobile-plan2b-server-execution.md  2026-07-07-ai-workbench-mobile-plan3-app.md  2026-07-08-ai-workbench-mobile-plan4-continuity.md
docs/superpowers/specs/: 2026-07-06-ai-workbench-design.md  (+3 more)
mobile/: app.json  babel.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  devices.tsx  index.tsx  pair.tsx  projects.tsx
mobile/src/lib/: api.test.ts  (+9 more)
scripts/: awb-approval-mcp.cjs  awb-run-stream.sh  awb-run.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lock.rs  main.rs  preflight.rs  runlog.rs  runner.rs  scan.rs
src/lib/: Console.svelte  PreflightBanner.svelte  ProjectList.svelte  Transcript.svelte  run.test.ts  run.ts  scan.test.ts  scan.ts  types.ts
(+4 files in other folders)
