[package]
name = "awb-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "awb-server"
path = "src/main.rs"

[dependencies]
awb-core = { path = "../awb-core" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "net", "time"] }
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
